--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Sample Code</h1>
+    <img src="C:\Users\BIT\Downloads\Web Dev Resources\CLASSROOM\project2\images\branch commands.png" alt="branch commands" height="300px" width="700px">
 </body>
 </html>
