--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Sample Code</h1>
     <img src="C:\Users\BIT\Downloads\Web Dev Resources\CLASSROOM\project2\images\branch commands.png" alt="branch commands" height="300px" width="700px">
     <img src="C:\Users\BIT\Downloads\Web Dev Resources\CLASSROOM\project2\images\merge branch.png" alt="merge branch" height="300px" width="700px">
+    <srcipt src="app.js"></script>
 </body>
 </html>
