added image of fixing mistakes

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 feature
     <img src="C:\Users\BIT\Downloads\Web Dev Resources\CLASSROOM\project2\images\branch commands.png" alt="branch commands" height="300px" width="700px">
     <img src="C:\Users\BIT\Downloads\Web Dev Resources\CLASSROOM\project2\images\merge branch.png" alt="merge branch" height="300px" width="700px">
+    <img src="C:\Users\BIT\Downloads\Web Dev Resources\CLASSROOM\project2\images\fixing mistakes.png" alt="fixing mistakes" height="300px" width="700px">
     <srcipt src="app.js"></script>
 
  main
